<resources>
    <string name="app_name">Frecycle</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="slogan">New recycles are waiting for you</string>
    <string name="skip">Skip</string>
    <string name="name">Full Name</string>
    <string name="number">Phone Number</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="password">Password</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="fav">Favorites</string>
    <string name="myAccount">My Account</string>
    <string name="accountLoginText">To see your account, please login. You can view your orders in My Account section.</string>
    <string name="should_login_to_continue">You need to login to continue.</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="settings">Account Settings</string>
    <string name="options">Options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="editProfile_description">Organize your account settings</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="wantToSignOut">Are you sure you want to sign out?</string>
    <string name="signOut_Description">Exit from your account</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="terms_Of_Use">I have accepted the terms of use Frecycle ®</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_password_length">password should be at least 6 characters long</string>
    <string name="input_error_phone">phone number required</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="input_error_phone_exists">phone already exists</string>
    <string name="input_error_checkBox_unchecked">you have to agree the terms of use</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="onOffer">ON OFFER</string>
    <string name="recycled">RECYCLED</string>
    <string name="comments">COMMENTS</string>
    <string name="title_activity_settings">Settings</string>

    <string name="change_photo">Change Photo</string>
    <string name="no_name">No Name</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_owner">Product Owner</string>
    <string name="product_description">Product Description</string>
    <string name="date_format">dd.MM.yyyy HH:mm</string>
    <string name="send_request">Send Request</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="Upload">Upload</string>
    <string name="NoSelectedPhoto">Product image is mandatory!</string>
    <string name="NoProductDescription">Please write product description!</string>
    <string name="NoProductTitle">Please write product title!</string>
    <string name="NoProductCity">Please select a city!</string>
    <string name="photoUploaded">Photo uploaded successfully!</string>
    <string name="productIsAdded">Product is added successfully :)</string>
    <string name="should_sign_in">You should login to make this operation!</string>
    <string name="productFavorited">This product is added to your favorites!</string>
    <string name="productUnfavorited">This product is removed from your favorites!</string>
    <string name="owner_cannot_send_request">The owner of the product cannot send requests for the product!</string>
    <string name="sure_delete_product">Are you sure to delete this product?</string>
    <string name="product_not_reachable">The product is no longer accessible!</string>
    <string name="notifications">Notifications</string>
    <string name="waiting_response">You should wait the response of the owner!</string>
    <string name="requests">Requests</string>
    <string name="type_message">Type a message...</string>
    <string name="emtpy_message">You can\'t send empty message!</string>
    <string name="received">RECEIVED</string>
    <string name="sent">SENT</string>
    <string name="nothing_changed">Nothing has changed!</string>
    <string name="data_changed">Your personal data has changed successfully!</string>

    <string-array name="city_array">
        <item>None</item>
        <item>Eskişehir</item>
        <item>Ankara</item>
        <item>İstanbul</item>
    </string-array>

    <string-array name="category">
        <item>Electronic</item>
        <item>Home and Garden</item>
        <item>Clothes</item>
        <item>Sport</item>
        <item>Baby and Chil</item>
        <item>Movie</item>
        <item>Book</item>
        <item>Office</item>


    </string-array>

</resources>
