<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@color/colorBackground"
            android:id="@+id/loginTopLayout">

            <TextView
                android:id="@+id/WelcomeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:layout_marginTop="50dp"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_below="@id/WelcomeTextView"
                android:text="@string/slogan"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginBottom="120dp"
            android:background="@drawable/layout_rounded_background"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"
                android:id="@+id/forgetPasswordText"
                android:textColor="@color/colorBackground"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                style="@style/customButtonStyle"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/dontHaveAccountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/passiveBlack"
                android:layout_alignParentBottom="true"
                android:text="@string/noAccount" />

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/dontHaveAccountText"
                android:layout_alignParentBottom="true"
                android:paddingStart="5dp"
                android:textColor="@color/colorBackground"
                android:textStyle="bold"
                android:text="@string/sign_up" />

            </RelativeLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loginProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:theme="@style/ProgressBarStyle" />

    </FrameLayout>