<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="35dp">

        <include layout="@layout/snippet_image_slider_item"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profilePhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/maggie"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/profileNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/black"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/ratingBarStyleSmall"
                    android:theme="@style/Theme.Rating"
                    android:numStars="5" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:maxLength="20"
                android:textSize="25sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/productFavButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_favorite_grey"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_description"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:minLines="3"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/productDateAndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_format"
            android:textAlignment="viewEnd"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/productSendRequestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/send_request"
            style="@style/customButtonStyle"/>
    </LinearLayout>
</ScrollView>
