<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical">


        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_add_photo_black"
            android:id="@+id/ivAddPhotos"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:spinnerMode="dropdown"
            android:id="@+id/editCategory"

            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:maxLength="200"
            />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:spinnerMode="dropdown"
            android:id="@+id/editCity"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/customButtonStyle"
            android:layout_marginEnd="20dp"
            android:text="@string/Upload"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/uploadProductButton"
            />


    </LinearLayout>


</ScrollView>

