<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    app:cardCornerRadius="5dp"
    android:layout_margin="5dp">

    <ProgressBar
        android:id="@+id/progressBar4ProductFav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible"
        style="?android:attr/progressBarStyle"
        android:theme="@style/ProgressBarStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/productPhotoFav"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:scaleType="centerCrop"
            android:background="#50000000">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/profileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:contentInsetStartWithNavigation="0dp">

                <ImageButton
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:id="@+id/removeButtonFav"
                    android:src="@drawable/ic_delete_black"
                    android:background="@android:color/transparent"
                    android:clickable="true"
                    android:focusable="true">

                </ImageButton>

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/productNameFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/productCityFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/city"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/productDateFav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/date_format"
                android:textColor="@color/black">
            </TextView>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>